# apertium-fra-por

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  apertium-fr-pt.fr-pt.dix  apertium-fr-pt.fr-pt.t1x  apertium-fr-pt.fr-pt.t2x  apertium-fr-pt.fr-pt.t3x  apertium-fr-pt.fr.metadix  apertium-fr-pt.fr.tsx  apertium-fr-pt.post-fr.dix  apertium-fr-pt.pt-fr.t1x  apertium-fr-pt.pt-fr.t2x  apertium-fr-pt.pt.dix  apertium-fra-por.fra-por.dix  apertium-fra-por.fra-por.t1x  apertium-fra-por.fra-por.t1x-old  apertium-fra-por.fra-por.t2x  apertium-fra-por.fra-por.t3x  apertium-fra-por.fra.metadix  apertium-fra-por.fra.tsx  apertium-fra-por.por-fra.t1x  apertium-fra-por.por-fra.t1x-old  apertium-fra-por.por-fra.t2x  apertium-fra-por.por-fra.t3x  apertium-fra-por.por.dix  apertium-fra-por.post-fr.dix  apertium-fra-por.post-fra.dix  apertium-fra-por.post-por.dix  buscaPar.xsl  configure.ac  fra-por.prob  modes.xml  pending-tests.sh  principal.xsl  regression-tests.sh  test.sh  translate-to-default-equivalent.xsl  wiki-tests.sh  (+1 more)
dev/: apertium-fr-pt.fr.metadix  cross-model-fr-es-pt.xml  cross.xml  getsample.pl  inconsistency-summary.sh  inconsistency.sh  interwiki.noun.pt-fr  interwiki.pl  mediawiki.pl  npfix.pl  patterns-not-detected.xml  pending.pl  quikfix.pl  quikscan.pl  quikwiki.pl  roundup-corpus.pl  roundup-paragraph.pl  sample.fr  sample.pt  scan-samples.pl  scan.pl  summary  test-samples.sh  test.sh  testpending.pl  testvoc-summary.fr-pt.txt  testvoc-summary.pt-fr.txt  testvoc.sh  verify.sh
dev/dics/: frpt.dic  ptfr.dic
t/: Pending_tests.html  Regression_tests.html  config.sh  latest-pending.results  latest-regression.results  pending-tests  regression-tests  wiki-tests
test/: fra-por-generator-expected.txt  fra-por-input.txt  fra-por-interchunk-expected.txt  fra-por-morph-expected.txt  fra-por-pending-generator-expected.txt  fra-por-pending-input.txt  fra-por-pending-interchunk-expected.txt  fra-por-pending-morph-expected.txt  fra-por-pending-postchunk-expected.txt  fra-por-pending-postgen-expected.txt  fra-por-pending-postgen-gold.txt  fra-por-pending-pretransfer-expected.txt  fra-por-pending-tagger-expected.txt  fra-por-postchunk-expected.txt  fra-por-postgen-expected.txt  fra-por-postgen-gold.txt  fra-por-tagger-expected.txt  por-fra-chunker-expected.txt  por-fra-generator-expected.txt  por-fra-input.txt  por-fra-morph-expected.txt  por-fra-pending-chunker-expected.txt  por-fra-pending-generator-expected.txt  por-fra-pending-input.txt  por-fra-pending-interchunk-expected.txt  por-fra-pending-morph-expected.txt  por-fra-pending-postchunk-expected.txt  por-fra-pending-postgen-expected.txt  por-fra-pending-postgen-gold.txt  por-fra-pending-pretransfer-expected.txt  por-fra-pending-tagger-expected.txt  por-fra-postchunk-expected.txt  por-fra-postgen-gold.txt  por-fra-regression-chunker-expected.txt  por-fra-regression-generator-expected.txt  por-fra-regression-input.txt  por-fra-regression-interchunk-expected.txt  por-fra-regression-morph-expected.txt  por-fra-regression-postchunk-expected.txt  por-fra-regression-postgen-expected.txt  (+4 more)
